backend/error2.log
node.exe : D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-n
ode\src\index.ts:859
At line:1 char:1
+ & "C:\Program Files\nodejs/node.exe" "C:\Program Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (D:\Gemini_Proje...rc\index 
   .ts:859:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/services/ai.ts(20,26): error TS2379: Argument of type '{ apiKey: 
string | undefined; }' is not assignable to parameter of type 
'GoogleGenAIOptions' with 'exactOptionalPropertyTypes: true'. Consider 
adding 'undefined' to the types of the target's properties.
  Types of property 'apiKey' are incompatible.
    Type 'string | undefined' is not assignable to type 'string'.
      Type 'undefined' is not assignable to type 'string'.

    at createTSError (D:\Gemini_Projects\Test\CognitiveOS\backend\node_m
odules\ts-node\src\index.ts:859:12)
    at reportTSError (D:\Gemini_Projects\Test\CognitiveOS\backend\node_m
odules\ts-node\src\index.ts:863:19)
    at getOutput (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modul
es\ts-node\src\index.ts:1077:36)
    at Object.compile (D:\Gemini_Projects\Test\CognitiveOS\backend\node_
modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (D:\Gemini_Projects\Test\CognitiveOS\backend\no
de_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (D:\Gemini_Projects
\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2379 ]
}
